--- a/app/src/main/res/layout/activity_edit_reminder.xml
+++ b/app/src/main/res/layout/activity_edit_reminder.xml
@@ -42,5 +42,13 @@
             android:text="Submit"
             android:textAllCaps="false"
             android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/delete_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete"
+            android:layout_gravity="end"
+            android:layout_marginEnd="16dp"/>
     </LinearLayout>
 </ScrollView>
